--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tracker Kasynowy</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <div class="text"><h1>CASINO TRACKER</h1></div>
 <body class="light">
@@ -39,17 +40,35 @@
     </div>
     <div id="efficiency">
   📌 Skuteczność: <span id="efficiency-rate">0%</span>
+  <div id="goal-section">
+  <h3>🎯 Cel finansowy</h3>
+  <label for="goal-input">Ustaw cel zysku:</label>
+  <input type="number" id="goal-input" placeholder="np. 500">
+  <button id="set-goal-btn">Zapisz cel</button>
+
+  <div id="goal-progress" style="margin-top: 1rem;">
+    <p>Postęp: <span id="goal-progress-text">0%</span></p>
+    <progress id="goal-bar" value="0" max="100" style="width: 100%;"></progress>
+    <p id="goal-warning" style="color: rgb(0, 255, 13); font-weight: bold;"></p>
+    <p id="goal-motivation" style="font-style: italic; margin-top: 0.5rem;"></p>
+  </div>
 </div>
 
+</div>
     <div id="chart-section">
   <div>
     <button onclick="setChartMode('daily')">Dziennie</button>
     <button onclick="setChartMode('weekly')">Tygodniowo</button>
+    
   </div>
   <canvas id="stats-chart"></canvas>
+<p id="chart-placeholder" style="display:none; text-align:center; font-weight:bold; margin-top:1rem;">
+  Brak danych do wyświetlenia 📉
+</p> 
 </div>
-
-
+<div id="goal-widget">
+  🎯 <span id="goal-short-progress"></span>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <ul id="transaction-list"></ul>
   </div>
