--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <div class="text"><h1>CASINO TRACKER</h1></div>
 <body class="light">
+  <div id="particles-js"></div>
   <div class="pin-screen" id="pin-screen">
     <h2>🔒 Wprowadź PIN</h2>
     <input type="password" id="pin-input" maxlength="6" placeholder="PIN" />
@@ -72,7 +73,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <ul id="transaction-list"></ul>
   </div>
-
+<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
