--- a/index.html
+++ b/index.html
@@ -71,7 +71,16 @@
   🎯 <span id="goal-short-progress"></span>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <div class="burger">
+    <div class="transaction-header">
+    <h1>Transakcje</h1>
+    <div class="transaction-button">
+    <i class="fa-solid fa-arrow-up"></i>
+    </div>
+    <span>Kliknij aby rozwinąć transakcje</span>
+    </div>
     <ul id="transaction-list"></ul>
+  </div>
   </div>
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <script src="app.js"></script>
